--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -37,6 +37,7 @@ jobs:
         # Build and test the project, then
         # deploy to Azure Web App.
         npm install
+        npm audit fix
         npm run build --if-present
         npm run test --if-present
     - name: add process.json
