--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^1.3.1",
     "jquery": "^3.6.0",
     "moment": "^2.29.0",
